@@ -65,6 +65,7 @@ Changes since Asterisk 1.4-beta was branched:
   * Added the parkedcalltransfers option to features.conf
   * Added 's' option to Page application.
   * Added the srvlookup option to iax.conf
+  * Added 'E' and 'V' commands to ExternalIVR.
 
 SIP changes
 -----------
